--- a/02-httpclient/01-sync-http-solution/pom.xml
+++ b/02-httpclient/01-sync-http-solution/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>keepingupwithjava</groupId>
-  <artifactId>sync-http-solution</artifactId>
+  <artifactId>01-sync-http-solution</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
