--- a/03-libraryupdates/02-processhandle-solution/pom.xml
+++ b/03-libraryupdates/02-processhandle-solution/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>keepingupwithjava</groupId>
-  <artifactId>process-handle-solution</artifactId>
+  <artifactId>02-processhandle-solution</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
